Add extra discussion to data storage chapter

--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -2100,8 +2100,10 @@ for a little bit of style</p>
     $ sqlite3
 \end{lstlisting}
 
+\paragraph{} This gives us a command line for directly manipulating and work with an SQLite database. You can find out a little more about using this tool by typing .help into the tool. We can leave the SQLite tool by typing .exit which should return us to the regular bash shell.
 
-\paragraph{} Using SQLite3 from Python is quite straightforward if you have worked with a relational database before. You will need to import the Python SQLite3 interface library, set a location where the SQLite database will be stored, and initialise a connection to the DB. For example,
+
+\paragraph{} We probably really want to work with SQlite from a programming langauge, like Python. Using SQLite3 from Python is quite straightforward if you have worked with a relational database before. You will need to import the Python SQLite3 interface library, set a location where the SQLite database will be stored, and initialise a connection to the DB. For example, start a Python shell (by typing python in the bash shell) then:
 
 
 \begin{lstlisting}[style=DOS]
