Clarify file naming in template section

--- a/workbook/workbook.tex
+++ b/workbook/workbook.tex
@@ -1359,7 +1359,7 @@ if __name__ == "__main__":
 
 \subsection{Templates with Conditional Arguments}
 \label{templates-conditional}
-\paragraph{} We can also use Jinja2 templates to perform conditional behaviours, for example, rendering our HTML differently depending upon the data that is passed in. This lets us do things like personalise a page if we have a person's name or else provide a default generic page if we don't. Let's look at the template (conditional.html) for such a scenario:
+\paragraph{} We can also use Jinja2 templates to perform conditional behaviours, for example, rendering our HTML differently depending upon the data that is passed in. This lets us do things like personalise a page if we have a person's name or else provide a default generic page if we don't. Let's look at the template, conditional.html, for such a scenario (you can either create this now or get the file from the repo). Conditional.html has the following content:
 
 \begin{lstlisting}
 <!doctype html>
